--- a/index2.html
+++ b/index2.html
@@ -1884,7 +1884,7 @@
           };
          
           // Submit to the form endpoint
-          fetch('https://submit-form.com/3vjDpiJUb', {
+          fetch('https://submit-form.com/KHnoEXSv6', {
             method: 'POST',
             headers: {
               'Content-Type': 'application/json',
@@ -1941,7 +1941,7 @@
           };
          
           // Submit to the form endpoint
-          fetch('https://submit-form.com/3vjDpiJUb', {
+          fetch('https://submit-form.com/KHnoEXSv6', {
             method: 'POST',
             headers: {
               'Content-Type': 'application/json',
